<resources>
    <string name="app_name">"设置"</string>
    <string name="vehicle">"车辆"</string>
    <string name="my_voyah">"我的岚图"</string>
    <string name="my_name_default">"恢复默认"</string>
    <string name="base_info">"基础信息"</string>
    <string name="my_device_name">"设备名称"</string>
    <string name="please_input_device_name">"请输入1–10个中文字或1–32个数字"</string>
    <string name="lan_tu">"岚图"</string>
    <string name="system_upgrade">"系统升级"</string>
    <string name="update_now">"立即更新"</string>
    <string name="view_updates">"查看更新"</string>
    <string name="traffic_query">"流量查询"</string>
    <string name="end_charging">"结束充电"</string>
    <string name="charging_gun_connected">"充电枪已连接"</string>
    <string name="discharging_gun_connected">"放电枪已连接"</string>
    <string name="charge_discharge_gun_connected">"已插枪"</string>
    <string name="charging">"充电中"</string>
    <string name="charging_finish">"充电完成"</string>
    <string name="no_power_grid">"电网未供电"</string>
    <string name="charging_error">"充电故障"</string>
    <string name="heating">"预热中"</string>
    <string name="discharging">"放电中"</string>
    <string name="discharging_error">"放电故障"</string>
    <string name="low_soc_stop_discharging">"低电量停止放电"</string>
    <string name="stop_charging">"停止充电"</string>
    <string name="stop_charging_tips">"停止充电后需要重新插入充电枪、或开启预约充电功能才能充电，确定停止充电吗？"</string>
    <string name="energy_management">"能源管理"</string>
    <string name="target_charging_setting">"目标充电电量设置："</string>
    <string name="target_charging_setting_title">"目标充电电量设置"</string>
    <string name="sixty_percent">"60%"</string>
    <string name="twenty_percent">"20%"</string>
    <string name="charging_limit_value">"充电限值"</string>
    <string name="discharge_setting">"放电设置："</string>
    <string name="discharge_setting_title">"放电电量设置"</string>
    <string name="five_percent">"5%"</string>
    <string name="fifty_percent">"50%"</string>
    <string name="discharge_limit_value">"放电限值"</string>
    <string name="work">"上班"</string>
    <string name="go_home">"回家"</string>
    <string name="work_travel_setting">"工作出行设置"</string>
    <string name="monday">"周一"</string>
    <string name="tuesday">"周二"</string>
    <string name="wednesday">"周三"</string>
    <string name="thursday">"周四"</string>
    <string name="friday">"周五"</string>
    <string name="saturday">"周六"</string>
    <string name="sunday">"周日"</string>
    <string name="monday_to_wednesday">"周一到周三"</string>
    <string name="monday_to_thursday">"周一到周四"</string>
    <string name="monday_to_friday">"周一到周五"</string>
    <string name="monday_to_saturday">"周一到周六"</string>
    <string name="monday_to_sunday">"周一到周日"</string>
    <string name="tuesday_to_thursday">"周二到周四"</string>
    <string name="tuesday_to_friday">"周二到周五"</string>
    <string name="tuesday_to_saturday">"周二到周六"</string>
    <string name="tuesday_to_sunday">"周二到周日"</string>
    <string name="wednesday_to_friday">"周三到周五"</string>
    <string name="wednesday_to_saturday">"周三到周六"</string>
    <string name="wednesday_to_sunday">"周三到周日"</string>
    <string name="thursday_to_saturday">"周四到周六"</string>
    <string name="thursday_to_sunday">"周四到周日"</string>
    <string name="friday_to_sunday">"周五到周日"</string>
    <string name="go_home_travel_setting">"回家出行设置"</string>
    <string name="travel_date_setting">"出行日期设置"</string>
    <string name="travel_time_setting">"出行时间设置"</string>
    <string name="appoint_travel_time">"预约出行时间"</string>
    <string name="peak_time_setting">"非高峰时间段设置"</string>
    <string name="peak_time_setting_show">"非高峰时间段："</string>
    <string name="hour">"时"</string>
    <string name="minute">"分"</string>
    <string name="start_time">"开始时间"</string>
    <string name="end_time">"结束时间"</string>
    <string name="appoint_to_charge">"预约充电"</string>
    <string name="appoint_to_charge_tips">"可设置优先充电时间段"</string>
    <string name="battery_warm_up">"电池预热"</string>
    <string name="comfort_cabin_reserve">"舒适座舱"</string>
    <string name="book_time_error">"保存失败，两组出⾏时间间隔需⼤于30min"</string>
    <string name="charging_time_error">"保存失败，两组出⾏时间间隔需⼤于30min"</string>
    <string name="appoint_info_change_tips">"预约出行信息更改提示"</string>
    <string name="appoint_info_desc_one">"用户您好，您的预约行程已发生变化，时间将更改如下:"</string>
    <string name="appoint_charge_start_time">"预约充电功能开启时间："</string>
    <string name="appoint_charge_finish_time">"预约充电功能结束时间："</string>
    <string name="appoint_info_desc_end">"电池预热或舒适座舱预约开启，当到达您的出行时间时，对应功能将提前达到理想状态。"</string>
    <string name="light">"灯光"</string>
    <string name="light_choose">"车外灯光选择"</string>
    <string name="manual_adjustment_of_low_beam_height">"近光高度手动调节"</string>
    <string name="ambient_light">"氛围灯"</string>
    <string name="ambient_light_limit_speed">"车速限制"</string>
    <string name="ninety_km_h">"90km/h"</string>
    <string name="one_hundred_thirty_km_h">"130km/h"</string>
    <string name="ambient_light_setting">"氛围灯设置"</string>
    <string name="ambient_light_close">"关闭"</string>
    <string name="ambient_light_static">"静态"</string>
    <string name="ambient_light_music">"拾音律动"</string>
    <string name="ambient_light_drive">"跟随驾驶"</string>
    <string name="ambient_light_brightness">"氛围灯亮度调节"</string>
    <string name="ambient_light_color_choose">"颜色选择"</string>
    <string name="ambient_light_follow_music">"氛围灯跟随音乐律动"</string>
    <string name="ambient_light_follow_driver_model">"氛围灯跟随驾驶模式"</string>
    <string name="ambient_drv_eco_plus_tips">"您已开启超级省电模式，该功能暂时无法开启"</string>
    <string name="ambient_light_current_drive_model">"当前驾驶模式："</string>
    <string name="amb_effect_settings">"效果设置"</string>
    <string name="amb_color_settings">"颜色设置"</string>
    <string name="amb_mode_settings">"模式设置"</string>
    <string name="amb_color_theme">"主题选择"</string>
    <string name="amb_strobe_mode">"DJ律动"</string>
    <string name="amb_strobe_low_speed">"慢速"</string>
    <string name="amb_strobe_common_speed">"正常"</string>
    <string name="amb_strobe_fast_speed">"快速"</string>
    <string name="amb_dynamic">"动态"</string>
    <string name="one_color_rhythm">"单色律动"</string>
    <string name="many_color_rhythm">"多色律动"</string>
    <string name="apparel_link">"服饰联动"</string>
    <string name="main_drive_priority">"主驾优先"</string>
    <string name="vice_drive_priority">"副驾优先"</string>
    <string name="auto_mode">"自动模式"</string>
    <string name="eco_mode">"经济模式"</string>
    <string name="comfort_mode">"舒适模式"</string>
    <string name="sport_mode">"高能模式"</string>
    <string name="eco_plus_mode">"低碳模式"</string>
    <string name="normal_mode">"普通模式"</string>
    <string name="driving_mode">"驾驶模式"</string>
    <string name="ipedal_on_mode">"单踏板开模式"</string>
    <string name="ipedal_off_mode">"单踏板关模式"</string>
    <string name="individual_mode">"自定义"</string>
    <string name="all_road_mode">"郊游模式"</string>
    <string name="snow_mode">"雪地模式"</string>
    <string name="amb_theme_choose">"主题选择"</string>
    <string name="xia_light">"霞光"</string>
    <string name="sunlight">"阳光"</string>
    <string name="firefly">"萤火"</string>
    <string name="mountains_rivers">"山川"</string>
    <string name="mystery">"秘境"</string>
    <string name="cold_moon">"冷月"</string>
    <string name="ocean">"海洋"</string>
    <string name="forest">"森林"</string>
    <string name="the_stars">"星辰"</string>
    <string name="wilderness">"旷野"</string>
    <string name="amb_light_scene_effect">"场景灯效"</string>
    <string name="begin_of_spring">"立春"</string>
    <string name="spring_equinox">"春分"</string>
    <string name="grain_rain">"谷雨"</string>
    <string name="begin_of_summer">"立夏"</string>
    <string name="summer_solstice">"夏至"</string>
    <string name="begin_of_autumn">"立秋"</string>
    <string name="autumn_equinox">"秋分"</string>
    <string name="frost_descent">"霜降"</string>
    <string name="begin_of_winter">"立冬"</string>
    <string name="winter_solstice">"冬至"</string>
    <string name="car_light_setting">"车灯设置"</string>
    <string name="car_light_outside">"车外灯光"</string>
    <string name="low_beam">"近光"</string>
    <string name="show_width">"示宽"</string>
    <string name="auto">"AUTO"</string>
    <string name="low_beam_height_adjustment">"近光灯高度调节"</string>
    <string name="recent">"最低"</string>
    <string name="near">"低"</string>
    <string name="middle_position">"中间"</string>
    <string name="far">"高"</string>
    <string name="furthest">"最高 (0)"</string>
    <string name="low_beam_lowest">"最低"</string>
    <string name="low_beam_low">"低"</string>
    <string name="low_beam_standard">"中间"</string>
    <string name="low_beam_high">"高"</string>
    <string name="low_beam_highest">"最高 (0)"</string>
    <string name="negative_two">"-2"</string>
    <string name="negative_one">"-1"</string>
    <string name="zero">"0"</string>
    <string name="one">"1"</string>
    <string name="two">"2"</string>
    <string name="dialog_permission_all_zone" translatable="false">全车权限</string>
    <string name="dialog_permission_driver_zone" translatable="false">主驾权限</string>
    <string name="dialog_permission_previous_song" translatable="false">\"上一首\"</string>
    <string name="dialog_permission_next_song" translatable="false">\"下一首\"</string>
    <string name="dialog_permission_play_music" translatable="false">\"播放音乐\"</string>
    <string name="dialog_permission_play_radio" translatable="false">\"播放电台\"</string>
    <string name="dialog_permission_continue_play" translatable="false">\"继续播放\"</string>
    <string name="dialog_permission_pause_play" translatable="false">\"暂停播放\"</string>
    <string name="dialog_permission_dial" translatable="false">\"打个电话给xxx\"</string>
    <string name="dialog_permission_view_miss_phone" translatable="false">\"查看未接电话\"</string>
    <string name="dialog_permission_view_contact" translatable="false">\"查看通话记录\"</string>
    <string name="dialog_permission_up_temp" translatable="false">\"调高温度\"</string>
    <string name="dialog_permission_down_temp" translatable="false">\"调低温度\"</string>
    <string name="dialog_permission_up_wind" translatable="false">\"调大风量\"</string>
    <string name="dialog_permission_down_wind" translatable="false">\"调小风量\"</string>
    <string name="dialog_permission_open_air" translatable="false">\"打开空调\"</string>
    <string name="dialog_permission_close_air" translatable="false">\"关闭空调\"</string>
    <string name="dialog_permission_open_window" translatable="false">\"打开车窗\"</string>
    <string name="dialog_permission_close_window" translatable="false">\"关闭车窗\"</string>
    <string name="dialog_permission_open_seat" translatable="false">\"打开座椅（通风/加热/按摩）\"</string>
    <string name="dialog_permission_close_seat" translatable="false">\"关闭座椅（通风/加热/按摩）\"</string>
    <string name="dialog_permission_up_volume" translatable="false">\"调大音量\"</string>
    <string name="dialog_permission_down_volume" translatable="false">\"调小音量\"</string>
    <string name="dialog_permission_ope_bluetooth" translatable="false">\"打开/关闭蓝牙\"</string>
    <string name="dialog_permission_ope_wifi" translatable="false">\"打开/关闭WIFI\"</string>
    <string name="dialog_permission_ope_hotspot" translatable="false">\"打开/关闭热点\"</string>
    <string name="dialog_permission_up_brightness" translatable="false">\"调高屏幕亮度\"</string>
    <string name="dialog_permission_down_brightness" translatable="false">\"调低屏幕亮度\"</string>
    <string name="dialog_permission_same_as_too" translatable="false">\"我也要/我也一样\"</string>
    <string name="dialog_permission_phone_accept" translatable="false">\"接听\"</string>
    <string name="dialog_permission_phone_reject" translatable="false">\"挂断\"</string>
    <string name="dialog_permission_other_wakeup_desc" translatable="false">此模块功能默认常开，不受免唤醒词开关影响</string>
    <string name="dialog_main_wakeup_title" translatable="false">语音唤醒</string>
    <string name="dialog_main_wakeup_tips" translatable="false">确定关闭语音唤醒，关闭后将无法通过语音唤醒？</string>
    <string name="dialog_confirm" translatable="false">确定</string>
    <string name="dialog_cancel" translatable="false">取消</string>
</resources>