<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_driver_zone_word_1"
        style="@style/common_vpa_text_main"
        android:layout_width="348px"
        android:layout_height="122px"
        android:layout_marginTop="160px"
        android:background="@drawable/rect_item_tab"
        android:gravity="center"
        android:text="@string/dialog_permission_same_as_too"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_driver_zone_word_2"
        style="@style/common_vpa_text_main"
        android:layout_width="348px"
        android:layout_height="122px"
        android:layout_marginStart="52px"
        android:background="@drawable/rect_item_tab"
        android:gravity="center"
        android:text="@string/dialog_permission_phone_accept"
        app:layout_constraintStart_toEndOf="@id/tv_driver_zone_word_1"
        app:layout_constraintTop_toTopOf="@id/tv_driver_zone_word_1" />

    <TextView
        android:id="@+id/tv_driver_zone_word_3"
        style="@style/common_vpa_text_main"
        android:layout_width="348px"
        android:layout_height="122px"
        android:layout_marginTop="52px"
        android:background="@drawable/rect_item_tab"
        android:gravity="center"
        android:text="@string/dialog_permission_phone_reject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_driver_zone_word_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52px"
        android:text="@string/dialog_permission_other_wakeup_desc"
        android:textColor="#7F333333"
        android:textSize="32px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_driver_zone_word_3" />

</androidx.constraintlayout.widget.ConstraintLayout>