<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rect_vpa_dialog_bg">

        <TextView
            android:id="@+id/tv_title"
            style="@style/dialog_vpa_text_title"
            android:layout_marginTop="52px"
            android:text="@string/dialog_main_wakeup_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/dialog_vpa_text_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68px"
            android:layout_marginTop="90px"
            android:layout_marginEnd="68px"
            android:text="@string/dialog_main_wakeup_tips"
            android:textColor="#333333"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <Button
            android:id="@+id/dialog_button_confirm"
            android:layout_width="384px"
            android:layout_height="130px"
            android:layout_marginStart="70px"
            android:layout_marginBottom="64px"
            android:background="@drawable/rect_confirm_button_bg"
            android:text="@string/dialog_confirm"
            android:textColor="#FFFFFF"
            android:textSize="36px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/dialog_button_cancel"
            android:layout_width="384px"
            android:layout_height="130px"
            android:layout_marginStart="64px"
            android:background="@drawable/rect_cancel_button_bg"
            android:text="@string/dialog_cancel"
            android:textColor="#333333"
            android:textSize="36px"
            app:layout_constraintBottom_toBottomOf="@id/dialog_button_confirm"
            app:layout_constraintStart_toEndOf="@id/dialog_button_confirm"
            app:layout_constraintTop_toTopOf="@id/dialog_button_confirm" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>